--- a/Cadastro de Repertorio.html
+++ b/Cadastro de Repertorio.html
@@ -196,6 +196,8 @@
     <div id="status"></div>
   </div>
 
+  <script src="config.js"></script>
+  <script src="sync.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
 
   <script>
@@ -301,29 +303,27 @@
       e.preventDefault();
       const btn = document.getElementById('btnSubmit');
       const status = document.getElementById('status');
-      btn.disabled = true;
-      status.style.display = "none";
 
       const data = {};
       new FormData(this).forEach((v, k) => data[k] = v);
 
-      fetch(SCRIPT_URL, { method: 'POST', body: JSON.stringify(data) })
-        .then(res => res.json())
-        .then(res => {
-          if (res.status === "success") {
-            status.innerText = "✅ Salvo com sucesso!";
-            status.className = "success";
-            tsMusica.clear();
-            tsTom.clear();
-          } else {
-            status.innerText = "⚠️ " + res.message;
-            status.className = "error";
-          }
-          status.style.display = "block";
-        })
-        .finally(() => {
-          btn.disabled = false;
-        });
+      // 1. Atualiza UI/Cache local imediatamente
+      SyncManager.updateLocalCache("Repertório", "add", data);
+
+      // 2. Adiciona à fila de sincronização
+      SyncManager.addToQueue(data);
+
+      // 3. Feedback visual imediato
+      status.innerText = "✅ Salvo localmente! Sincronizando...";
+      status.className = "success";
+      status.style.display = "block";
+      tsMusica.clear();
+      tsTom.clear();
+
+      // Opcional: Redirecionar ou avisar que será enviado ao voltar online
+      if (!navigator.onLine) {
+        status.innerText = "☁️ Salvo offline. Será enviado quando houver conexão.";
+      }
     });
 
     window.onload = carregarDados;
